--- a/src/locales/fa.json
+++ b/src/locales/fa.json
@@ -1,4 +1,11 @@
 {
  "movieList": "لیست فیلم ها",
- "highestRate" : "بالا ترین امیتاز"
+ "highestRate" : "بالا ترین امیتاز",
+ "lowestRate" : "پایین ترین امیتاز",
+ "rateOfMovies" : "امتیاز فیلم",
+ "genre" : "ژانر",
+ "scienceFiction" : "علمی تخیلی",
+ "comedy" : "کمدی",
+ "drama" : "درام",
+ "action" : "اکشن"
 }
