feat(filters) : add filters and set filters in to URL

--- a/src/locales/fa.json
+++ b/src/locales/fa.json
@@ -7,5 +7,6 @@
  "scienceFiction" : "علمی تخیلی",
  "comedy" : "کمدی",
  "drama" : "درام",
- "action" : "اکشن"
+ "action" : "اکشن",
+ "allMOviesAndSeries" : "لیست تمامی فیلم و سریال ها"
 }
