feat(back) : back to home button

--- a/src/locales/fa.json
+++ b/src/locales/fa.json
@@ -8,5 +8,6 @@
  "comedy" : "کمدی",
  "drama" : "درام",
  "action" : "اکشن",
- "allMOviesAndSeries" : "لیست تمامی فیلم و سریال ها"
+ "allMOviesAndSeries" : "لیست تمامی فیلم و سریال ها",
+ "home" : "صفحه اصلی"
 }
